.filter, .peek, .map and .collect